gccida/c1/start_sequence
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/start_sequence/src/emit-rtl.c:4906:12: error: expected expression
*( _OWORD *)&emit->x_first_insn = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/start_sequence/src/emit-rtl.c:4906:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&emit->x_first_insn = 0LL; 
   ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/start_sequence/src/obj/emit-rtl.o] Error 1
